--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title: Paradox Scout # site title, also used in the navbar
 email: webmaster@sdarobotics.org
 description: "A First Robotics Scouting Application built by Team Paradox 2102" # site description
 baseurl: "/roborecon-app" # the subpath of your site, e.g. /blog
-url: "https://github.com/Decatur-High-GlobalDynamics/roborecon-app" # the base hostname & protocol for your site
+url: "https://decatur-high-globaldynamics.github.io/roborecon-app/" # the base hostname & protocol for your site
 
 
 ### Header Settings ###
